welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: missing arguments for method setDirection in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
  setDirection()=Direction.EST
  ^DwarfCode:2: error: not found: value Direction
  setDirection()=Direction.EST
                 ^DwarfCode:6: error: not found: value prendbiscuit
  prendbiscuit()
  ^DwarfCode:7: error: missing arguments for method setDirection in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
  setDirection()=Direction.OUEST
  ^DwarfCode:7: error: not found: value Direction
  setDirection()=Direction.OUEST
                 ^DwarfCode:12: error: missing arguments for method setDirection in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
  setDirection()=Direction.EST
  ^DwarfCode:12: error: not found: value Direction
  setDirection()=Direction.EST
                 ^DwarfCode:17: error: not found: value estFacemur
  if (estFacemur())
      ^DwarfCode:26: error: missing arguments for method setDirection in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
setDirection()=Direction.SUD
^DwarfCode:26: error: not found: value Direction
setDirection()=Direction.SUD
               ^DwarfCode:28: error: missing arguments for method setDirection in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
setDirection()=Direction.OUEST
^DwarfCode:28: error: not found: value Direction
setDirection()=Direction.OUEST
               ^